--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
-    <script src="http://maps.google.com/maps?file=api&v=2ampkey=AIzaSyCx_9kFf8SAzo_0nGqHlSxrZDfHjb5X6OM" type="text/javascript"></script>
-    <script src="build/js/vendor.min.js"></script>
-    <script src="build/css/vendor.css"></script>
+    <title>Geolocation and Google Maps API</title>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="build/css/vendor.css">
     <link rel="stylesheet" href="build/css/styles.css">
+    <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <meta name="viewport" content="initial-scale=1.0">
-    <meta charset="utf-8">
+
   </head>
-  <body>
-  <div class="container">
+  <body class="container">
+    <h1>Road Trip!!!</h1>
+    <div id="map"></div>
 
-    <div id="myMap" style="width: 600px; height: 400px;"></div>
-  </div>
-
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCx_9kFf8SAzo_0nGqHlSxrZDfHjb5X6OM"></script>
   </body>
 </html>
