add 5 facts using markers on googlemaps

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Geolocation and Google Maps API</title>
+    <title>FactTrippin</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="build/css/vendor.css">
     <link rel="stylesheet" href="build/css/styles.css">
     <script src="build/js/vendor.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="build/js/app.js"></script>
 
   </head>
   <body class="container">
-    <h1>Road Trip!!!</h1>
-    <div id="map"></div>
-
+    <div class="well">
+      <h1 class="title">FactTrippin'</h1>
+    </div>
+    <div id="map"></div><br>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCx_9kFf8SAzo_0nGqHlSxrZDfHjb5X6OM"></script>
   </body>
 </html>
