--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="well">
       <h1 class="title">FactTrippin'</h1>
     </div>
-    <div id="map"></div><br>
+    <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCx_9kFf8SAzo_0nGqHlSxrZDfHjb5X6OM"></script>
   </body>
 </html>
